# mini-rust

./: .gitignore  Cargo.toml  LICENSE
core/: Cargo.toml
core/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs  mini_expr.rs  mini_file.rs  mini_ident.rs  mini_item.rs  mini_pat.rs  mini_path.rs  mini_stmt.rs  mini_type.rs
macros/src/expr/: mini_assign_expr.rs  mini_binary_expr.rs  mini_block_expr.rs  mini_call_expr.rs  mini_field_expr.rs  mini_lit_expr.rs  mini_match_expr.rs  mini_method_call_expr.rs  mini_paren_expr.rs  mini_path_expr.rs  mini_reference_expr.rs  mini_return_expr.rs  mini_struct_expr.rs  mini_tuple_expr.rs  mini_unary_expr.rs  mini_while_expr.rs  mod.rs
macros/src/item/: mini_enum.rs  mini_fn.rs  mini_impl.rs  mini_struct.rs  mini_trait.rs  mod.rs
macros/src/lowering/: env.rs  lowering.rs  mod.rs  program.rs  program_lowerer.rs
macros/src/stmt/: mini_block.rs
macros/src/util/: env.rs  mod.rs
mini-ir/: Cargo.toml
mini-ir/src/: base_type.rs  binding.rs  constraint.rs  context.rs  context_management.rs  datatypes.rs  dependency_graph.rs  free_variables.rs  kind.rs  kind_check.rs  lib.rs  substitutions.rs  term.rs  type_check.rs  type_util.rs  types.rs  unify.rs  util.rs
mini-rust-ast/: Cargo.toml
mini-rust-ast/src/: lib.rs  mini_expr.rs  mini_file.rs  mini_generics.rs  mini_ident.rs  mini_item.rs  mini_pat.rs  mini_path.rs  mini_stmt.rs  mini_type.rs  util.rs
system-f-omega/: Cargo.toml
system-f-omega-macros/: Cargo.toml
system-f-omega-macros/src/: kind.rs  lib.rs  type.rs
system-f-omega/src/: context_management.rs  datatypes.rs  dependency_graph.rs  eval.rs  free_variables.rs  lib.rs  (+2 more)
(+27 files in other folders)
