[package]
name = "macros"
version = "0.0.0"
authors = ["holgerchristensen <holger.gott@icloud.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full", "visit-mut"]}
paris = "1.5"
system_f_omega = { path = "../system-f-omega" }

chalk-solve = {rev = "8138a99", git = "https://github.com/rust-lang/chalk"}
chalk-ir = {rev = "8138a99", git = "https://github.com/rust-lang/chalk"}
chalk-integration = {rev = "8138a99", git = "https://github.com/rust-lang/chalk"}